--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Todo List</title>
-    <link rel="stylesheet" href="12-todo-list.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p>Todo List</p>
@@ -15,8 +15,9 @@
     
     <div class="js-todo-list todo-grid">text</div>
 
-    <script src="12-todo-list.js"></script>
+    <script src="script.js"></script>
   </body>
 
 </html>
+
 
